migrate to cyclic-db part1

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ VAPID_PUBLIC_KEY="get it from 'npx web-push generate-vapid-keys'"
 VAPID_PRIVATE_KEY="get it from 'npx web-push generate-vapid-keys'"
 VAPID_SUBJECT="mailto:test@test.test"
 
+CYCLIC_DB="name of your cyclic database"
+
 PORT="3333"
