--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "clean": "rm ./data/db.json",
-    "start": "npm run clean && node server.js;"
+    "start": "node server.js;"
   },
   "dependencies": {
     "body-parser": "1.19.0",
+    "cyclic-dynamodb": "^0.0.27",
     "dotenv": "^16.0.3",
     "express": "4.16.4",
     "express-session": "1.16.2",
-    "lowdb": "1.0.0",
     "web-push": "3.4.1"
   }
 }
